[package]
name = "home_video_loader"
version = "1.0.1"
edition = "2021"
description = "Apple TV video transcoder with subtitle burning support"
authors = ["baud"]

[[bin]]
name = "tvcode"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
